--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ico.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Schema - 个人知识管理系统</title>
     <meta name="description" content="Schema - 面向个人的结构化知识管理系统" />
